@@ -64,7 +64,12 @@ which match that regexp will be drawn highlighted</li>
 
 <br>enter another regexp to highlight more
 <br>enter an empty string (and hit return) and the selection will be cleared
-<br>&nbsp;</ul>
+<li>
+you can select/deselect files by clicking on them<br>
+those selected files will appear in the popupmenu under 'selection' when
+you press the right mouse button<br>
+<BR></li>
+</ul>
 
 <h4>
 Description of Shadings and Options:</h4>
